fixed bad text showing up, spacing on contact small and removed text

--- a/app/modules/contact-info/contact-info.less
+++ b/app/modules/contact-info/contact-info.less
@@ -10,10 +10,10 @@ contact-info {
 		}
 		.profile-pic {
 			max-width: 400px;
-  			margin-top: 39px;
+  			margin-top: 15px;
 			float: left;
 			margin-right: 20px;
-			margin-bottom: 10px;
+			margin-bottom: 15px;
 		}
 
 		.small-pic {
